--- a/src/containers/admin/admin.scss
+++ b/src/containers/admin/admin.scss
@@ -74,3 +74,29 @@
   background-color: $color-main-6 !important;
 }
 }
+
+@import "helpers/variables.scss";
+@import "helpers/mixin.scss";
+
+// responsive
+@include maxResponsive("large-down"){
+  .adminContainer-content{
+    .adminContent__sidebar{
+      position: absolute;
+      top: 50px;
+      left: 0;
+      transition: left 0.2s;
+      z-index: 9999;
+      height: 100%;
+      width: 240px;
+    }
+    .adminContent__sidebar.inFix{
+      left: -100%;
+    }
+    .adminContent__main{
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
+}
+
