--- a/src/containers/admin/Header/Notify/Notify.scss
+++ b/src/containers/admin/Header/Notify/Notify.scss
@@ -140,3 +140,32 @@
     transform: scaleY(1);
   }
 }
+
+//responsive
+@import "helpers/variables.scss";
+@import "helpers/mixin.scss";
+@include maxResponsive("large-down") {
+  .notify {
+    .notify__content {
+      .messageNotify__title {
+        h4 {
+          font-size: 20px;
+        }
+      }
+    }
+  }
+}
+@include maxResponsive("small-down") {
+  .notify {
+    right: 0;
+    width: 100%;
+    &:before {
+      right: 88px;
+    }
+  }
+  .messageNotify{
+    &:before {
+      right: 55px;
+    }
+  }
+}
