--- a/src/containers/admin/Header/sideBar/SideBar.scss
+++ b/src/containers/admin/Header/sideBar/SideBar.scss
@@ -9,6 +9,7 @@
   background-color: #fff;
   padding: 30px 20px;
   height: calc(100vh - 50px);
+  overflow-y: scroll;
   .userCurrent {
     text-align: center;
     border-bottom: 1px solid #ccc;
@@ -28,7 +29,7 @@
         height: 100%;
         border-radius: 50%;
       }
-      p{
+      p {
         margin-bottom: 0;
         font-weight: 700;
         font-size: 80px;
@@ -46,13 +47,13 @@
       justify-content: center;
       align-items: center;
       font-size: 15px;
-      &> span {
+      & > span {
         margin: 10px;
         cursor: pointer;
         color: #ff7070;
         &:hover {
-            animation: wave 0.6s ease-out infinite;
-          }
+          animation: wave 0.6s ease-out infinite;
+        }
       }
       a {
         span {
@@ -126,3 +127,4 @@
     transform: translateY(0);
   }
 }
+
