--- a/src/components/Box/BoxTitle/BoxTitle.scss
+++ b/src/components/Box/BoxTitle/BoxTitle.scss
@@ -1,43 +1,58 @@
-.boxTitle-content{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 25px;
-    border-bottom: 1px dotted rgba(0, 0, 0, 0.2);
-    h4{
-        margin-bottom: 0;
-    }
-    .boxTitle-icon{
-        font-size: 14px;
-        span{
-            vertical-align: 0px;
-            margin-left: 5px;
-            cursor: pointer;
-            svg{
-                transform-origin: center center;
-                transform: scale(0.8) rotate(0deg);
-                transition: transform .3s;
-            }
-            &:hover{
-                svg{
-                    transform: scale(1);
-                }
-            }
+.boxTitle-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 25px;
+  border-bottom: 1px dotted rgba(0, 0, 0, 0.2);
+  h4 {
+    margin-bottom: 0;
+  }
+  .boxTitle-icon {
+    font-size: 14px;
+    span {
+      vertical-align: 0px;
+      margin-left: 5px;
+      cursor: pointer;
+      svg {
+        transform-origin: center center;
+        transform: scale(0.8) rotate(0deg);
+        transition: transform 0.3s;
+      }
+      &:hover {
+        svg {
+          transform: scale(1);
         }
+      }
     }
-    .boxTitle-icon.hiden{
-        span{
-            
-            &:nth-of-type(2){
-                svg{
-                    transform: scale(0.8) rotate(90deg);
-                }
-                &:hover{
-                    svg{
-                        transform: scale(1) rotate(90deg);
-                    }
-                }
-            }
+  }
+  .boxTitle-icon.hiden {
+    span {
+      &:nth-of-type(2) {
+        svg {
+          transform: scale(0.8) rotate(90deg);
         }
+        &:hover {
+          svg {
+            transform: scale(1) rotate(90deg);
+          }
+        }
+      }
     }
+  }
+}
+
+@import "helpers/variables.scss";
+@import "helpers/mixin.scss";
+
+//reponsive
+@include maxResponsive("small-down") {
+  .boxTitle-content {
+    padding: 10px;
+    h4 {
+      font-size: 18px;
+    }
+    .boxTitle-icon {
+      font-size: 12px;
+    }
+  }
 }
