--- a/src/containers/admin/Header/sideBar/SideBar.scss
+++ b/src/containers/admin/Header/sideBar/SideBar.scss
@@ -9,7 +9,7 @@
   background-color: #fff;
   padding: 30px 20px;
   height: calc(100vh - 50px);
-  overflow-y: scroll;
+  overflow-y: auto;
   .userCurrent {
     text-align: center;
     border-bottom: 1px solid #ccc;
