--- a/src/containers/admin/AdminTitle/AdminTitle.scss
+++ b/src/containers/admin/AdminTitle/AdminTitle.scss
@@ -1,35 +1,62 @@
-.admin-content__container{
+.admin-content__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
+  h4 {
+    font-size: 24px;
+    color: #666;
+    margin-bottom: 0;
+  }
+  .tabLink {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
-    margin-bottom: 30px;
-    h4{
-        font-size: 24px;
-        color: #666;
-        margin-bottom: 0;
+    color: #888;
+    font-weight: 500;
+    font-size: 14px;
+    border-radius: 20px;
+    background-color: rgba(220, 208, 208, 0.3);
+    padding: 12px 20px;
+    a {
+      color: #888;
+      font-weight: 500;
     }
-    .tabLink{
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        color: #888;
-        font-weight: 500;
+    p {
+      margin-bottom: 0;
+    }
+    span {
+      margin: 0 5px;
+      font-size: 12px;
+      &:nth-of-type(1) {
         font-size: 14px;
-        border-radius: 20px;
-        background-color: rgba(220, 208, 208, 0.3);
-        padding: 12px 20px;
-        a{
-            color: #888;
-            font-weight: 500; 
-        }
-        p{margin-bottom: 0;}
-        span{
-            margin: 0 5px;
-            font-size: 12px;
-            &:nth-of-type(1){
-                font-size: 14px;
-            }   
-            
-        }
+      }
     }
+  }
+}
+
+@import "helpers/variables.scss";
+@import "helpers/mixin.scss";
+
+// responsive
+@include maxResponsive("small-down") {
+  .admin-content__container {
+    h4 {
+      font-size: 18px;
+    }
+    .tabLink {
+      padding: 8px 10px;
+      p {
+        margin-bottom: 0;
+        white-space: nowrap;
+      }
+      span {
+        margin: 0 1px;
+        font-size: 10px;
+        &:nth-of-type(1) {
+          font-size: 10px;
+        }
+      }
+    }
+  }
 }
