--- a/src/components/Header/HeaderNotLogin/headerNotLoginFixed.scss
+++ b/src/components/Header/HeaderNotLogin/headerNotLoginFixed.scss
@@ -1,3 +1,8 @@
+header{
+  position: relative;
+  z-index: 100000;
+}
+
 #header-fixed {
   display: block;
   position: relative;
@@ -187,13 +192,12 @@
   display: block;
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 768px) {
   header {
     .header__content {
       display: none;
     }
     #header-fixed {
-      position: fixed;
       z-index: 1000;
       width: 100%;
       #header__content-fixed {
@@ -202,9 +206,8 @@
       .header-fixed-reponsive {
         background-color: white;
         width: 100%;
-        position: fixed;
         display: flex;
-        padding: 20px 0;
+        padding: 20px 0 5px;
         justify-content: space-around;
         align-items: stretch;
         .menu-hidden-left {
@@ -215,23 +218,72 @@
           }
         }
         .header-fixed-logo {
+          transform: translateX(-65px);
           img {
             width: 90px;
           }
         }
-        button {
-          border: none;
-          background: transparent;
-          font-weight: 600;
-          font-size: 16px;
-          a {
-            color: #7a7d85;
+        .search-input-antd {
+          transform: translateX(-100px);
+          .ant-input-group {
+            border: 1px solid #ddd;
+            .ant-input {
+              border: none;
+              font-weight: 600;
+              &:hover {
+                border-color: #1dbf73;
+              }
+              &:focus {
+                border-color: #1dbf73;
+              }
+            }
+            .ant-input-group-addon {
+              button {
+                display: none;
+              }
+            }
+          }
+        }
+        ul {
+          display: flex;
+          li {
+            a {
+              background: transparent;
+              font-weight: 600;
+              font-size: 16px;
+              color: #7a7d85;
+            }
+          }
+          .li-join {
+            border: 1px solid #1dbf73;
+            background: white;
+            border-radius: 5px;
+            padding: 2px 20px;
+            margin-left: 20px;
+            a {
+              color: #1dbf73;
+            }
           }
         }
       }
     }
     #category__content {
-      display: none;
+        overflow-x: scroll;
+        font-weight: 600;
+      ul {
+        width: 155%;
+        .li-cate {
+          margin: 0 10px;
+          a {
+            color: #adacac;
+          }
+          &:hover {
+            .category__hover {
+              display: none;
+            }
+          }
+        }
+      }
     }
   }
   .ant-drawer-open {
@@ -289,6 +341,73 @@
           }
         }
       }
+    }
+  }
+}
+
+@media only screen and (max-width: 414px) {
+  header {
+    .header__content {
+      display: none;
+    }
+    #header-fixed {
+      position: fixed;
+      z-index: 1000;
+      width: 100%;
+      #header__content-fixed {
+        display: none;
+      }
+      .header-fixed-reponsive {
+        background-color: white;
+        width: 100%;
+        position: fixed;
+        display: flex;
+        padding: 20px 0 10px;
+        justify-content: space-around;
+        align-items: stretch;
+        .menu-hidden-left {
+          color: #7a7d85;
+          i {
+            margin-top: 4px;
+            font-size: 26px;
+          }
+        }
+        .header-fixed-logo {
+          transform: translateX(0);
+          img {
+            width: 90px;
+          }
+        }
+        .search-input-antd {
+          display: none;
+        }
+        ul {
+          li {
+            a {
+              background: transparent;
+              font-weight: 600;
+              font-size: 16px;
+              color: #7a7d85;
+            }
+          }
+          .li-signin {
+            display: none;
+          }
+          .li-join {
+            border: none;
+            background: unset;
+            border-radius: unset;
+            padding: 0;
+            margin: 0;
+            a {
+              color: #7a7d85;
+            }
+          }
+        }
+      }
+    }
+    #category__content {
+      display: none;
     }
   }
 }
