--- a/src/containers/home/homePage/pageSearchJob/pageSearchJob.scss
+++ b/src/containers/home/homePage/pageSearchJob/pageSearchJob.scss
@@ -107,3 +107,36 @@
     }
   }
 }
+
+@media only screen and (max-width: 414px) {
+  .page-search-job {
+    padding-top: 50px;
+    .render-list-jobs {
+      .result-sort {
+        flex-direction: column;
+        .search-by-switch {
+          flex-direction: column;
+          .switch-icon {
+            display: flex;
+            justify-content: space-between;
+          }
+        }
+      }
+      .main-content {
+        .job-item {
+          height: 300px;
+          .card-footer {
+            gap: 55px;
+          }
+        }
+      }
+      .pagination {
+        height: 30px;
+        button {
+          font-size: 10px;
+          padding: 0 10px;
+        }
+      }
+    }
+  }
+}
