--- a/src/containers/home/homePage/profileUser/createNewJobByUser/createNewJobByUser.scss
+++ b/src/containers/home/homePage/profileUser/createNewJobByUser/createNewJobByUser.scss
@@ -176,3 +176,107 @@
     }
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .form-create-job-by-user {
+    .content-create-job-by-user {
+      .render-overview {
+        label[title] {
+          width: 80px;
+        }
+      }
+      .render-upload-avatar {
+        .dragger-image {
+          .ant-upload-drag {
+            .ant-upload-hint {
+              display: none;
+            }
+          }
+        }
+      }
+      .render-done {
+        .done-content {
+          width: 90%;
+        }
+      }
+    }
+    .steps-action {
+      width: 50%;
+    }
+  }
+}
+@media only screen and (max-width: 414px) {
+  .form-create-job-by-user {
+    padding-bottom: 50px;
+    .content-create-job-by-user {
+      width: 85%;
+      padding-bottom: 0;
+      .render-overview {
+        .item-select {
+          .ant-form-item-control-input-content {
+            gap: 24px;
+            flex-direction: column;
+          }
+        }
+      }
+      .render-upload-avatar {
+        h3 {
+          font-size: 22px;
+        }
+        p {
+          font-size: 12px;
+        }
+        .dragger-image {
+          gap: 20px;
+          padding-bottom: 20px;
+          .ant-upload-drag {
+            .ant-upload-drag-container {
+              .ant-upload-text {
+                font-size: 12px;
+              }
+            }
+          }
+        }
+      }
+      .render-done {
+        .done-content {
+          width: 100%;
+          h3 {
+            font-size: 32px;
+          }
+          p {
+            font-size: 16px;
+          }
+        }
+      }
+    }
+    .steps-action {
+      padding-bottom: 0;
+      bottom: 10px;
+      right: 5px;
+      .btn-pre-steps,
+      .btn-next-steps {
+        font-size: 12px;
+        padding: 0 10px;
+        height: 30px;
+      }
+    }
+    .stepsbar-create-job-by-user {
+      display: flex;
+      width: 85%;
+      .ant-steps-item {
+        .ant-steps-item-icon {
+          margin-top: 4px;
+          width: 24px;
+          height: 24px;
+          .ant-steps-icon {
+            top: -4.5px;
+          }
+        }
+        .ant-steps-item-title {
+          font-size: 12px;
+        }
+      }
+    }
+  }
+}
