--- a/src/containers/shared/Auth/Login/Login.scss
+++ b/src/containers/shared/Auth/Login/Login.scss
@@ -172,6 +172,11 @@
 @import "helpers/mixin.scss";
 @import "helpers/variables.scss";
 
+@include maxResponsive(extra-small) {
+  #signInt {
+    padding-top: 90px;
+  }
+}
 @include minResponsive(small) {
   #signInt {
     .signIn__content {
