--- a/src/components/Content/HomeLoggedIn/CarouselLoggedIn/carouselLoggedIn.scss
+++ b/src/components/Content/HomeLoggedIn/CarouselLoggedIn/carouselLoggedIn.scss
@@ -1,81 +1,120 @@
 @import "helpers/variables.scss";
 
-.carousel-start{
-    margin:40px 0 0 0 !important;
-    justify-content:space-between;
-    .carousel-start-text{
-        background-color:rgba($color: #fafafa, $alpha: 0.8);
-        border:1px solid rgba($color: gray, $alpha: 0.3);
-        border-radius:5px;
-        text-align: center;
-        padding:10px 20px;
-        max-width:20%;
-        height:200px;
-        p{
-            font-size:$fs-3;
-            color:#62646a
-        }
-        button{
-            border: 1px solid #1dbf73;
-            padding: 5px 55px;
-            color: #1dbf73;
-            background-color: white;
-            transition: all 0.5s;
-            margin-top: 20px;
-            border-radius: 5px;
-            font-weight: bold;
-            &:hover{
-                color:$color-white;
-                background-color:$color-green-all
-            }
-        }
+.carousel-start {
+  margin: 40px 0 0 0 !important;
+  justify-content: space-between;
+  .carousel-start-text {
+    background-color: rgba($color: #fafafa, $alpha: 0.8);
+    border: 1px solid rgba($color: gray, $alpha: 0.3);
+    border-radius: 5px;
+    text-align: center;
+    padding: 10px 20px;
+    max-width: 20%;
+    height: 200px;
+    p {
+      font-size: $fs-3;
+      color: #62646a;
     }
-    .carousel-start-img{
-        max-width:78%;
-        padding:0;
-        .img-item{
-            position:relative;
-            span{
-                position:absolute;
-                font-size:$fs-4;
-                top:20px;
-            left:25px;
-                color:#fafafa;
-                font-weight:bolder;
-                p{
-                    font-size:$fs-3;
-                font-weight:normal;
+    button {
+      border: 1px solid #1dbf73;
+      padding: 5px 55px;
+      color: #1dbf73;
+      background-color: white;
+      transition: all 0.5s;
+      margin-top: 20px;
+      border-radius: 5px;
+      font-weight: bold;
+      &:hover {
+        color: $color-white;
+        background-color: $color-green-all;
+      }
+    }
+  }
+  .carousel-start-img {
+    max-width: 78%;
+    padding: 0;
+    .img-item {
+      position: relative;
+      span {
+        position: absolute;
+        font-size: $fs-4;
+        top: 20px;
+        left: 25px;
+        color: #fafafa;
+        font-weight: bolder;
+        p {
+          font-size: $fs-3;
+          font-weight: normal;
+        }
+      }
+      img {
+        width: 100%;
+        height: 200px;
+      }
+    }
+  }
+  .slick-dots {
+    left: -40%;
+    display: block;
+    bottom: 10%;
+    li {
+      button {
+        &:before {
+          font-size: 12px;
+        }
+        &:hover:before {
+          color: white;
+        }
+      }
 
-                }
-            }
-            img{
-                width:100%;
-                height:200px
-            }
+      .slick-active {
+        button {
+          &:before {
+            color: white;
+          }
         }
+      }
     }
-    .slick-dots{
-        left: -40%;
-        display: block;
-        bottom: 10%;
-        li{
-            
-            button{
-               &:before{ font-size:12px;}
-               &:hover:before{ color:white}
-            }
-            
-            .slick-active{
-                button{
-                    &:before{
-                    color:white }
-                }
-            }
-               
-        }
-    }
-    
+  }
 }
-.slick-dots li.slick-active button:before{
-    color:white !important
+.slick-dots li.slick-active button:before {
+  color: white !important;
+}
+
+@media only screen and (max-width: 768px) {
+  .carousel-start {
+    .carousel-start-text {
+      max-width: 35%;
+      button {
+        padding: 5px 20px;
+        margin-top: 0;
+      }
+    }
+    .carousel-start-img {
+      max-width: 70%;
+    }
+  }
+}
+@media only screen and (max-width: 414px) {
+  .carousel-start {
+    margin-top: 70px !important;
+    .carousel-start-text {
+      display: none;
+      max-width: 0%;
+    }
+    .carousel-start-img {
+      max-width: 100%;
+      .img-item{
+        img {
+            height: 180px;
+            object-fit: cover;
+          }
+      }
+     
+    }
+    .slick-dots {
+      left: -30%;
+      bottom: 5%;
+    }
+  }
 }
