--- a/src/components/Content/HomeLoggedIn/EditorsPicks/editorsPicks.scss
+++ b/src/components/Content/HomeLoggedIn/EditorsPicks/editorsPicks.scss
@@ -101,3 +101,26 @@
     }
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .editors-picks {
+    .editors-row {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+}
+
+@media only screen and (max-width: 414px) {
+  .editors-picks {
+    .editors-row {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    .pagination{
+      height: 30px;
+      button{
+        font-size: 10px;
+        padding: 0 10px;
+      }
+    }
+  }
+}
