--- a/src/components/Content/HomeNotLogin/Business/business.scss
+++ b/src/components/Content/HomeNotLogin/Business/business.scss
@@ -58,7 +58,7 @@
 }
 //
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 768px) {
   .solution {
     .solution__content {
       width: 90%;
@@ -67,6 +67,7 @@
       font-weight: 600;
       .solution__left {
         h2 {
+          color: white;
           font-size: 30px;
           padding: 20px 0 0 0;
         }
