--- a/src/containers/home/homePage/profileUser/detailJob/detailJob.scss
+++ b/src/containers/home/homePage/profileUser/detailJob/detailJob.scss
@@ -231,7 +231,7 @@
                   margin-right: 10px;
                   font-size: 20px;
                 }
-                &:last-child{
+                &:last-child {
                   font-size: 20px;
                 }
               }
@@ -257,12 +257,38 @@
               border-radius: 5px;
               font-size: 16px;
               opacity: 0.9;
-              &:hover{
+              &:hover {
                 opacity: 1;
               }
             }
           }
         }
+      }
+    }
+  }
+}
+@media only screen and (max-width: 414px) {
+  .detail-job {
+    .detail-job-content {
+      .bar-fixed {
+        padding: 0 30px;
+      }
+      .main-content {
+        .about-the-seller {
+          margin-top: 50px;
+          .info-bottom {
+            gap: 100px;
+          }
+        }
+      }
+    }
+  }
+}
+@media only screen and (max-width: 375px) {
+  .detail-job {
+    .detail-job-content {
+      .bar-fixed {
+        padding: 0 10px;
       }
     }
   }
