change admin responsive

--- a/src/containers/admin/admin.scss
+++ b/src/containers/admin/admin.scss
@@ -95,6 +95,9 @@
       height: 100%;
       width: 240px;
     }
+    .adminContent__sidebar.lightTheme {
+      background-color: #fff!important;
+    }
     .adminContent__sidebar.inFix{
       left: -100%;
     }
